--- a/package.json
+++ b/package.json
@@ -3,13 +3,19 @@
   "version": "1.0.0",
   "scripts": {
     "start": "node app.js",
-    "test": "jest"
+    "dev": "nodemon app.js",
+    "test": "jest --ci --reporters=default --reporters=jest-junit",
+    "build": "npm install --production && npm prune --production",
+    "lint": "eslint ."
   },
   "dependencies": {
     "express": "^4.18.2"
   },
   "devDependencies": {
     "jest": "^29.7.0",
-    "supertest": "^6.3.3"
+    "jest-junit": "^16.0.0",
+    "nodemon": "^3.0.2",
+    "supertest": "^6.3.3",
+    "eslint": "^8.56.0"
   }
 }
